// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-columns-container columnsCount 2 renders column children 1`] = `
<DocumentFragment>
  <div
    style="padding-top: 16px; padding-bottom: 16px;"
  >
    <div
      class="mj-column-wrapper"
      style="font-size: 0px; text-align: left;"
    >
      <div
        class="mj-column-per-50"
        style="display: inline-block; vertical-align: middle; width: 300px; max-width: 300px; min-height: 40px; margin: 0px; box-sizing: border-box;"
      >
        <table
          border="0"
          cellpadding="0"
          cellspacing="0"
          role="presentation"
          style="border-collapse: collapse; border-spacing: 0px;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="box-sizing: content-box; vertical-align: middle; font-size: 16px; padding-left: 0px; padding-right: 0px;"
              >
                bread
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="mj-column-per-50"
        style="display: inline-block; vertical-align: middle; width: 300px; max-width: 300px; min-height: 40px; margin: 0px; box-sizing: border-box;"
      >
        <table
          border="0"
          cellpadding="0"
          cellspacing="0"
          role="presentation"
          style="border-collapse: collapse; border-spacing: 0px;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="box-sizing: content-box; vertical-align: middle; font-size: 16px; padding-left: 0px; padding-right: 0px;"
              >
                tomato
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 3 renders column children 1`] = `
<DocumentFragment>
  <div
    style="padding-top: 16px; padding-bottom: 16px;"
  >
    <div
      class="mj-column-wrapper"
      style="font-size: 0px; text-align: left;"
    >
      <div
        class="mj-column-per-33.333333333333"
        style="display: inline-block; vertical-align: middle; width: 200px; max-width: 200px; min-height: 40px; margin: 0px; box-sizing: border-box;"
      >
        <table
          border="0"
          cellpadding="0"
          cellspacing="0"
          role="presentation"
          style="border-collapse: collapse; border-spacing: 0px;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="box-sizing: content-box; vertical-align: middle; font-size: 16px; padding-left: 0px; padding-right: 0px;"
              >
                bread
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="mj-column-per-33.333333333333"
        style="display: inline-block; vertical-align: middle; width: 200px; max-width: 200px; min-height: 40px; margin: 0px; box-sizing: border-box;"
      >
        <table
          border="0"
          cellpadding="0"
          cellspacing="0"
          role="presentation"
          style="border-collapse: collapse; border-spacing: 0px;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="box-sizing: content-box; vertical-align: middle; font-size: 16px; padding-left: 0px; padding-right: 0px;"
              >
                tomato
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="mj-column-per-33.333333333333"
        style="display: inline-block; vertical-align: middle; width: 200px; max-width: 200px; min-height: 40px; margin: 0px; box-sizing: border-box;"
      >
        <table
          border="0"
          cellpadding="0"
          cellspacing="0"
          role="presentation"
          style="border-collapse: collapse; border-spacing: 0px;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="box-sizing: content-box; vertical-align: middle; font-size: 16px; padding-left: 0px; padding-right: 0px;"
              >
                lettuce
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with default values 1`] = `
<DocumentFragment>
  <div
    style="padding-top: 16px; padding-bottom: 16px;"
  >
    <div
      class="mj-column-wrapper"
      style="font-size: 0px; text-align: left;"
    >
      <div
        class="mj-column-per-50"
        style="display: inline-block; vertical-align: middle; width: 300px; max-width: 300px; min-height: 40px; margin: 0px; box-sizing: border-box;"
      >
        <table
          border="0"
          cellpadding="0"
          cellspacing="0"
          role="presentation"
          style="border-collapse: collapse; border-spacing: 0px;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="box-sizing: content-box; vertical-align: middle; font-size: 16px; padding-left: 0px; padding-right: 0px;"
              />
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="mj-column-per-50"
        style="display: inline-block; vertical-align: middle; width: 300px; max-width: 300px; min-height: 40px; margin: 0px; box-sizing: border-box;"
      >
        <table
          border="0"
          cellpadding="0"
          cellspacing="0"
          role="presentation"
          style="border-collapse: collapse; border-spacing: 0px;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="box-sizing: content-box; vertical-align: middle; font-size: 16px; padding-left: 0px; padding-right: 0px;"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
